A failled try to change the nav bg color on scrolling

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </div>
   <span id="scriptConetent">
     <script type="module" src="app.js"></script>
+    <script src="/Components/navbarComponent/navbar.js"></script>
   </span>
 </body>
 </html>
