Slider and up arrow

--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SPA with HTML Components</title>
-  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-  <link rel="stylesheet" href="style.css">
-  <script src="https://kit.fontawesome.com/59a9cf4a82.js" crossorigin="anonymous"></script>
-  <!-- <base href="/Components/assets/img/products/"/> -->
-
-</head>
-<body>
-  
-  <div id="app">
-  </div>
-  <span id="scriptConetent">
-    <script type="module" src="app.js"></script>
-    
-
-  </span>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SPA with HTML Components</title>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/59a9cf4a82.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- <base href="/Components/assets/img/products/"/> -->
+  </head>
+  <body>
+    <!-- make top arrow to scroll back to the top page -->
+    <!-- put the user name on the navbar when loged in -->
+    <!-- thanks to nada!!!!! -->
+    <div id="app"></div>
+    <span id="scriptConetent">
+      <script type="module" src="app.js"></script>
+    </span>
+    <a class="up_arrow" href="#app"><i class="fa-solid fa-circle-arrow-up"></i></a>
+  </body>
 </html>
