--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>David&Eslam Co.</title>
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <script
       src="https://kit.fontawesome.com/59a9cf4a82.js"
       crossorigin="anonymous"
@@ -16,5 +17,7 @@
     <span id="scriptConetent">
       <script type="module" src="app.js"></script>
     </span>
+
+    <script src="/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
   </body>
 </html>
